[project]
name = "mcp-gia-vang"
version = "0.1.0"
description = "MCP server cho giá vàng Việt Nam (SJC, Doji, PNJ, ...)"
dependencies = [
    "mcp>=1.8.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "redis>=5.0.0" 
]
# Chỉ build 1 module duy nhất
py-modules = ["mcp_gia_vang"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# Lệnh này sẽ trỏ đến hàm 'main' trong file 'mcp_gia_vang.py'
mcp-gia-vang = "mcp_gia_vang:main"